--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10855,3 +10855,13 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.cover_card {
+  width: 100%;
+  height: 400px;
+}
+.cover_card img {
+  width: 100%;
+  height: 400px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
